# patharg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: flipcase.rs  revchars.rs  tokio-flipcase.rs  tokio-revchars.rs
examples/flipcase/: Cargo.toml  README.md
examples/flipcase/src/: main.rs
examples/revchars/: Cargo.toml  README.md
examples/revchars/src/: main.rs
examples/tokio-flipcase/: Cargo.toml  README.md
examples/tokio-flipcase/src/: main.rs
examples/tokio-revchars/: Cargo.toml  README.md
examples/tokio-revchars/src/: main.rs
src/: lib.rs
tests/: io.rs
tests/bins/linelen/: Cargo.toml
tests/bins/linelen/src/: main.rs
tests/bins/revbytes/: Cargo.toml
tests/bins/revbytes/src/: main.rs
tests/bins/revchars/: Cargo.toml
tests/bins/revchars/src/: main.rs
tests/bins/tokio_linelen/: Cargo.toml
tests/bins/tokio_linelen/src/: main.rs
tests/bins/tokio_revbytes/: Cargo.toml
tests/bins/tokio_revbytes/src/: main.rs
tests/bins/tokio_revchars/: Cargo.toml
tests/bins/tokio_revchars/src/: main.rs
