[package]
name = "patharg"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Treat \"-\" (hyphen/dash) arguments as stdin/stdout"
authors = ["John Thorvald Wodder II <patharg@varonathe.org>"]
repository = "https://github.com/jwodder/patharg"
license = "MIT"
keywords = ["argv", "args", "stdin", "stdout"]
categories = ["command-line-interface", "filesystem"]
exclude = ["/.*"]

[dependencies]
clap = { version = "4.2.3", optional = true, features = ["derive"] }
either = "1.8.1"
lexopt = { version = "0.3.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
rstest = { version = "0.17.0", default-features = false }
rstest_reuse = "0.5.0"
test-binary = "3.0.1"

[features]
examples = ["dep:clap", "dep:lexopt"]

[[example]]
name = "flipcase"
required-features = ["examples"]

[[example]]
name = "revchars"
required-features = ["examples"]
