[package]
name = "tokio-flipcase"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "An example of using patharg with clap and tokio"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
clap = { version = "4.2.3", features = ["derive"] }
patharg = { path = "../..", features = ["tokio"] }
tokio = { version = "1.27.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.12", features = ["io-util"], default-features = false }

[lints]
workspace = true
