[package]
name = "tokio-revchars"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "An example of using patharg with lexopt and tokio"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
lexopt = "0.3.0"
patharg = { path = "../..", features = ["tokio"] }
tokio = { version = "1.27.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.12", features = ["io-util"], default-features = false }

[lints]
workspace = true
